@@ -1,3 +1,8 @@
+2005-01-31  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* mail/mail-stub-exchange.c (get_folder): Dont mark Trash folder
+	for filtering junk mails. Fixes #66963
+
 2005-01-29  Sarfraaz Ahmed <asarfraaz@novell.com>
 	
 	* storage/exchange-hierarchy-webdav.c (hierarchy_new_folder):
